<?xml version="1.0"?>
<package format="3">
  <name>gscam</name>
  <version>1.0.1</version>
  <description>
    A ROS camera driver that uses gstreamer to connect to
    devices such as webcams.
  </description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <license>BSD</license>

  <author email="jbo@jhu.edu"> Jonathan Bohren</author>
  <author email="tjay@cs.brown.edu">Graylin Trevor Jay</author>
  <author email="chriscrick@cs.brown.edu">Christopher Crick</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- System library dependencies -->
  <depend>libboost-thread-dev</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>libglib2.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>
  <depend>libgstreamer1.0-dev</depend>

  <!-- ROS package dependencies (format 3 uses <depend> instead of build/run_depend) -->
  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>